--- a/trafie/Base.lproj/Main.storyboard
+++ b/trafie/Base.lproj/Main.storyboard
@@ -1679,35 +1679,41 @@
                         <sections>
                             <tableViewSection id="L3u-p6-Kwp">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="73" id="mYt-Tp-8CC">
-                                        <rect key="frame" x="0.0" y="99" width="375" height="73"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="40" id="mYt-Tp-8CC">
+                                        <rect key="frame" x="0.0" y="99" width="375" height="40"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mYt-Tp-8CC" id="Ggw-hI-jlx">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="73"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="02k-yF-yjP" customClass="AKPickerView" customModule="AKPickerView_Swift">
-                                                    <rect key="frame" x="8" y="8" width="359" height="57"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                </view>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZQb-Ti-diH">
+                                                    <rect key="frame" x="8" y="0.0" width="359" height="40"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="24"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                    <connections>
+                                                        <action selector="disciplineEditing:" destination="6v2-7A-rbx" eventType="editingDidBegin" id="nmn-cS-Ows"/>
+                                                    </connections>
+                                                </textField>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="02k-yF-yjP" firstAttribute="top" secondItem="Ggw-hI-jlx" secondAttribute="topMargin" id="39f-Py-UI9"/>
-                                                <constraint firstItem="02k-yF-yjP" firstAttribute="trailing" secondItem="Ggw-hI-jlx" secondAttribute="trailingMargin" id="ExY-wb-pwI"/>
-                                                <constraint firstItem="02k-yF-yjP" firstAttribute="leading" secondItem="Ggw-hI-jlx" secondAttribute="leadingMargin" id="VEX-9u-5oi"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="02k-yF-yjP" secondAttribute="bottom" id="ugv-IQ-Ini"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ZQb-Ti-diH" secondAttribute="trailing" id="9VJ-qs-7Nj"/>
+                                                <constraint firstAttribute="leadingMargin" secondItem="ZQb-Ti-diH" secondAttribute="leading" id="Odf-AL-xnY"/>
+                                                <constraint firstItem="ZQb-Ti-diH" firstAttribute="centerY" secondItem="Ggw-hI-jlx" secondAttribute="centerY" id="PKf-Sh-Qdw"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <constraints>
+                                            <constraint firstItem="ZQb-Ti-diH" firstAttribute="height" secondItem="mYt-Tp-8CC" secondAttribute="height" constant="40" id="SBr-yp-MD5"/>
+                                        </constraints>
                                     </tableViewCell>
                                     <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="120" id="XF4-gT-s9Q">
-                                        <rect key="frame" x="0.0" y="172" width="375" height="120"/>
+                                        <rect key="frame" x="0.0" y="139" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="XF4-gT-s9Q" id="c9b-xQ-6db">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <pickerView contentMode="scaleToFill" misplaced="YES" showsSelectionIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hE0-qd-iP3">
-                                                    <rect key="frame" x="8" y="-48" width="359" height="217"/>
+                                                    <rect key="frame" x="8" y="-48" width="359" height="160"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="162" id="5aX-85-Gq6"/>
                                                     </constraints>
@@ -1721,7 +1727,7 @@
                                             <constraints>
                                                 <constraint firstItem="hE0-qd-iP3" firstAttribute="leading" secondItem="c9b-xQ-6db" secondAttribute="leadingMargin" id="S3e-GB-Wtp"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="hE0-qd-iP3" secondAttribute="trailing" id="VKU-zS-DYl"/>
-                                                <constraint firstAttribute="centerY" secondItem="hE0-qd-iP3" secondAttribute="centerY" constant="-0.25" id="a8Z-rt-Io3"/>
+                                                <constraint firstAttribute="centerY" secondItem="hE0-qd-iP3" secondAttribute="centerY" id="a8Z-rt-Io3"/>
                                                 <constraint firstItem="hE0-qd-iP3" firstAttribute="trailing" secondItem="c9b-xQ-6db" secondAttribute="trailingMargin" id="jrY-Mg-Uug"/>
                                                 <constraint firstItem="hE0-qd-iP3" firstAttribute="leading" secondItem="c9b-xQ-6db" secondAttribute="leadingMargin" id="oQm-5q-4A3"/>
                                                 <constraint firstAttribute="centerX" secondItem="hE0-qd-iP3" secondAttribute="centerX" id="qQr-0I-hTv"/>
@@ -1735,7 +1741,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="ykP-m5-NbA">
-                                        <rect key="frame" x="0.0" y="292" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="259" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ykP-m5-NbA" id="xHp-TR-EL1">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -1768,7 +1774,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="snO-0Q-AFo">
-                                        <rect key="frame" x="0.0" y="336" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="303" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="snO-0Q-AFo" id="n0T-kt-Fja">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -1803,7 +1809,7 @@
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="kRP-Un-PNr">
-                                        <rect key="frame" x="0.0" y="380" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="347" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kRP-Un-PNr" id="qGT-Ov-4GQ">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -1830,7 +1836,7 @@
                             <tableViewSection headerTitle="Details (optional)" id="qvs-x1-OSw">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="Rvk-od-gta">
-                                        <rect key="frame" x="0.0" y="466" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="433" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Rvk-od-gta" id="RbU-lu-Uyk">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -1862,7 +1868,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="Gjc-Cz-Sbj">
-                                        <rect key="frame" x="0.0" y="510" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="477" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gjc-Cz-Sbj" id="ALc-DD-oXj">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -1894,7 +1900,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="9xX-JD-Utp">
-                                        <rect key="frame" x="0.0" y="554" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="521" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9xX-JD-Utp" id="mhT-0c-biN">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -1930,7 +1936,7 @@
                             <tableViewSection headerTitle="Public comment (optional)" id="lEw-t0-Cvu">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="100" id="LhQ-Yf-sCM">
-                                        <rect key="frame" x="0.0" y="640" width="375" height="100"/>
+                                        <rect key="frame" x="0.0" y="607" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LhQ-Yf-sCM" id="vPO-jP-bUP">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
@@ -1962,7 +1968,7 @@
                             <tableViewSection headerTitle="Private notes (optional)" id="HYZ-rh-MfB">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="100" id="sDH-cv-9Rg">
-                                        <rect key="frame" x="0.0" y="782" width="375" height="100"/>
+                                        <rect key="frame" x="0.0" y="749" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="sDH-cv-9Rg" id="oOb-bU-hRI">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
@@ -1994,7 +2000,7 @@
                             <tableViewSection headerTitle="Who can see this?" footerTitle="If your profile is public, you can limit the visibility of a specific activity." id="oBV-p6-s7G">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="rZ5-ys-HQW">
-                                        <rect key="frame" x="0.0" y="924" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="891" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rZ5-ys-HQW" id="uEd-uy-9lX">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -2048,10 +2054,10 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
-                        <outlet property="akDisciplinesPickerView" destination="02k-yF-yjP" id="UIH-mB-gSR"/>
                         <outlet property="commentsField" destination="Bgt-58-jGk" id="Iho-bw-gXM"/>
                         <outlet property="competitionField" destination="R8g-67-4Dq" id="OGd-to-1jN"/>
                         <outlet property="dateField" destination="hQ1-A3-Y2e" id="C7o-HA-iIx"/>
+                        <outlet property="disciplinesField" destination="ZQb-Ti-diH" id="gle-gm-uEM"/>
                         <outlet property="dismissViewButton" destination="Yzs-jl-Tew" id="dmQ-1P-S8C"/>
                         <outlet property="isOutdoorSegment" destination="egN-iX-9Dq" id="rNK-My-Wn5"/>
                         <outlet property="isPrivateSegment" destination="1Si-st-rov" id="m29-Ma-lx8"/>
