--- a/trafie/Base.lproj/Main.storyboard
+++ b/trafie/Base.lproj/Main.storyboard
@@ -1852,7 +1852,7 @@
                                                     <rect key="frame" x="8" y="8" width="359" height="104"/>
                                                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.12309966216216216" colorSpace="calibratedRGB"/>
                                                     <state key="normal" title="Choose Image">
-                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     </state>
                                                     <connections>
                                                         <action selector="selectPicture:" destination="6v2-7A-rbx" eventType="touchUpInside" id="KVB-ZW-p1f"/>
@@ -2312,7 +2312,7 @@
                                     </label>
                                     <imageView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EI1-sk-MPo">
                                         <rect key="frame" x="8" y="224" width="359" height="102"/>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="0.85241082702020199" green="0.85241082702020199" blue="0.85241082702020199" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="R09-wS-RJW"/>
                                             <constraint firstAttribute="height" constant="300" id="exn-eO-rFr"/>
