--- a/trafie/Base.lproj/Main.storyboard
+++ b/trafie/Base.lproj/Main.storyboard
@@ -2294,22 +2294,6 @@
                                         <color key="textColor" red="0.75294117650000003" green="0.20784313730000001" blue="0.035294117649999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <color key="highlightedColor" red="0.75294117650000003" green="0.20784313730000001" blue="0.035294117649999998" alpha="1" colorSpace="calibratedRGB"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some notes live here" textAlignment="justified" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D76-aN-Hjs">
-                                        <rect key="frame" x="8" y="412" width="359" height="21"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="127" id="Cxb-ob-4TG"/>
-                                            <constraint firstAttribute="width" constant="359" id="bn4-0J-lQ3"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="Cxb-ob-4TG"/>
-                                                <exclude reference="bn4-0J-lQ3"/>
-                                            </mask>
-                                        </variation>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rank:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xLP-Xd-GLl">
                                         <rect key="frame" x="8" y="334" width="38" height="18"/>
                                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
@@ -2335,12 +2319,57 @@
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ekZ-N8-RDB">
+                                        <rect key="frame" x="66" y="441" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="9SD-6b-xKE"/>
+                                            <constraint firstAttribute="height" constant="50" id="zXK-pF-Paf"/>
+                                        </constraints>
+                                        <state key="normal" image="fb_filled.png">
+                                            <color key="titleColor" red="0.36149042180000002" green="0.4306656734" blue="0.58794981059999996" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="postToFacebook:" destination="dmY-A0-s5o" eventType="touchUpInside" id="PQr-zF-9nw"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aDK-cK-1xB">
+                                        <rect key="frame" x="8" y="441" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="Lql-hE-LdE"/>
+                                            <constraint firstAttribute="width" constant="50" id="Ppc-vg-enK"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="jVa-tB-vg6"/>
+                                        </constraints>
+                                        <state key="normal" image="tw_filled.png">
+                                            <color key="titleColor" red="0.36149042180000002" green="0.4306656734" blue="0.58794981059999996" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="postToTwitter:" destination="dmY-A0-s5o" eventType="touchUpInside" id="caE-Nl-2Gj"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some notes live here" textAlignment="justified" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="none" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D76-aN-Hjs">
+                                        <rect key="frame" x="8" y="412" width="359" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="127" id="Cxb-ob-4TG"/>
+                                            <constraint firstAttribute="width" constant="359" id="bn4-0J-lQ3"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="Cxb-ob-4TG"/>
+                                                <exclude reference="bn4-0J-lQ3"/>
+                                            </mask>
+                                        </variation>
+                                    </label>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="EI1-sk-MPo" firstAttribute="leading" secondItem="ZY9-Po-Mt4" secondAttribute="leading" constant="8" id="0L1-pY-UAP"/>
                                     <constraint firstItem="D76-aN-Hjs" firstAttribute="leading" secondItem="ZY9-Po-Mt4" secondAttribute="leading" constant="8" id="1Mp-CS-R0P"/>
+                                    <constraint firstItem="ekZ-N8-RDB" firstAttribute="leading" secondItem="aDK-cK-1xB" secondAttribute="trailing" constant="8" id="3Lc-ET-9lx"/>
                                     <constraint firstItem="2YB-8s-gmn" firstAttribute="top" secondItem="ZY9-Po-Mt4" secondAttribute="top" constant="40" id="5Ri-4L-M8D"/>
                                     <constraint firstItem="xLP-Xd-GLl" firstAttribute="top" secondItem="zMu-WO-E5K" secondAttribute="bottom" constant="8" id="5at-0u-l84"/>
+                                    <constraint firstItem="aDK-cK-1xB" firstAttribute="top" secondItem="D76-aN-Hjs" secondAttribute="bottom" constant="8" id="863-xn-xNk"/>
                                     <constraint firstAttribute="trailing" secondItem="RFQ-nz-FkZ" secondAttribute="trailing" constant="8" id="8Zq-iz-bhF"/>
                                     <constraint firstItem="3tG-Va-s5q" firstAttribute="top" secondItem="xh6-YB-Bna" secondAttribute="bottom" constant="8" id="95W-vT-9cU"/>
                                     <constraint firstItem="3xG-Oq-7xM" firstAttribute="top" secondItem="3tG-Va-s5q" secondAttribute="top" id="9Re-lt-xqc"/>
@@ -2348,6 +2377,7 @@
                                     <constraint firstItem="3tG-Va-s5q" firstAttribute="leading" secondItem="ZY9-Po-Mt4" secondAttribute="leading" constant="8" id="B6R-Bx-T6b"/>
                                     <constraint firstItem="3xG-Oq-7xM" firstAttribute="leading" secondItem="ZY9-Po-Mt4" secondAttribute="leading" constant="8" id="Bgs-V6-WVB"/>
                                     <constraint firstItem="zMu-WO-E5K" firstAttribute="centerX" secondItem="ZY9-Po-Mt4" secondAttribute="centerX" id="Bxt-HD-yjr"/>
+                                    <constraint firstItem="ekZ-N8-RDB" firstAttribute="centerX" secondItem="ZY9-Po-Mt4" secondAttribute="centerX" id="Dm3-Tw-dDc"/>
                                     <constraint firstItem="ocB-2N-EqM" firstAttribute="top" secondItem="ZY9-Po-Mt4" secondAttribute="top" constant="8" id="E0B-Ot-Hsb"/>
                                     <constraint firstItem="xh6-YB-Bna" firstAttribute="top" secondItem="xLP-Xd-GLl" secondAttribute="bottom" constant="8" id="FoN-MV-Ayc"/>
                                     <constraint firstItem="zMu-WO-E5K" firstAttribute="width" secondItem="2YB-8s-gmn" secondAttribute="width" id="GlT-EM-XXN"/>
@@ -2384,6 +2414,7 @@
                                     <constraint firstItem="zMu-WO-E5K" firstAttribute="top" secondItem="kNa-Ne-WN9" secondAttribute="bottom" constant="8" id="j1f-mv-O7L"/>
                                     <constraint firstItem="xLP-Xd-GLl" firstAttribute="top" secondItem="EI1-sk-MPo" secondAttribute="bottom" constant="8" id="lXh-BV-5sE"/>
                                     <constraint firstAttribute="trailing" secondItem="MPp-ID-Xnb" secondAttribute="trailing" constant="8" id="lks-DA-KId"/>
+                                    <constraint firstItem="aDK-cK-1xB" firstAttribute="leading" secondItem="ZY9-Po-Mt4" secondAttribute="leading" constant="8" id="m8W-0V-3R3"/>
                                     <constraint firstItem="EI1-sk-MPo" firstAttribute="top" secondItem="D76-aN-Hjs" secondAttribute="bottom" constant="93" id="mRo-7c-CIh"/>
                                     <constraint firstItem="ocB-2N-EqM" firstAttribute="leading" secondItem="ZY9-Po-Mt4" secondAttribute="leading" constant="8" id="nd2-ne-4Vy"/>
                                     <constraint firstItem="MPp-ID-Xnb" firstAttribute="top" secondItem="PiS-JI-QpK" secondAttribute="bottom" constant="4" id="nop-2Y-3HB"/>
@@ -2394,6 +2425,7 @@
                                     <constraint firstAttribute="trailing" secondItem="EI1-sk-MPo" secondAttribute="trailing" constant="8" id="qxJ-MG-iuZ"/>
                                     <constraint firstItem="kNa-Ne-WN9" firstAttribute="leading" secondItem="ZY9-Po-Mt4" secondAttribute="leading" constant="8" id="r2e-NO-fG9"/>
                                     <constraint firstItem="xLP-Xd-GLl" firstAttribute="leading" secondItem="ZY9-Po-Mt4" secondAttribute="leading" constant="8" id="t1p-XO-ush"/>
+                                    <constraint firstItem="ekZ-N8-RDB" firstAttribute="top" secondItem="aDK-cK-1xB" secondAttribute="top" id="v66-7L-bSA"/>
                                     <constraint firstAttribute="trailing" secondItem="5Sz-VT-0uY" secondAttribute="trailing" constant="8" id="vgf-kO-QKU"/>
                                     <constraint firstItem="MPp-ID-Xnb" firstAttribute="leading" secondItem="ZY9-Po-Mt4" secondAttribute="leading" constant="8" id="wrM-M9-kgK"/>
                                     <constraint firstItem="2YB-8s-gmn" firstAttribute="centerX" secondItem="ZY9-Po-Mt4" secondAttribute="centerX" id="yWR-7f-m9L"/>
@@ -2408,6 +2440,7 @@
                                         <exclude reference="mRo-7c-CIh"/>
                                         <exclude reference="5at-0u-l84"/>
                                         <exclude reference="fTB-F8-SYw"/>
+                                        <exclude reference="Dm3-Tw-dDc"/>
                                     </mask>
                                 </variation>
                                 <connections>
@@ -2436,6 +2469,7 @@
                         <outlet property="disciplineValue" destination="5Sz-VT-0uY" id="wyR-OB-fa7"/>
                         <outlet property="editButton" destination="Bzq-M0-TpT" id="HVM-K3-7o7"/>
                         <outlet property="emptyImageLabel" destination="PqD-M1-FjX" id="iSG-Po-Z2R"/>
+                        <outlet property="facebookShareButton" destination="ekZ-N8-RDB" id="YcW-yW-xbr"/>
                         <outlet property="locationLabel" destination="xh6-YB-Bna" id="sTc-Jg-JMk"/>
                         <outlet property="locationValue" destination="UK1-SG-aPP" id="Ukj-lW-VwK"/>
                         <outlet property="notesLabel" destination="vJq-9U-der" id="yld-yq-0Gz"/>
@@ -2446,6 +2480,7 @@
                         <outlet property="scrollView" destination="ZY9-Po-Mt4" id="c2W-4N-17a"/>
                         <outlet property="syncActivityButton" destination="PiS-JI-QpK" id="BVr-x8-FKv"/>
                         <outlet property="syncActivityText" destination="MPp-ID-Xnb" id="gvv-qF-BG7"/>
+                        <outlet property="twitterShareButton" destination="aDK-cK-1xB" id="tCb-5O-yCg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bHO-4f-g1G" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -3005,11 +3040,13 @@
     </scenes>
     <resources>
         <image name="dummy_user_profile.png" width="128" height="128"/>
+        <image name="fb_filled.png" width="100" height="100"/>
         <image name="ic_close" width="24" height="24"/>
         <image name="ic_face" width="24" height="24"/>
         <image name="ic_format_list_bulleted" width="24" height="24"/>
         <image name="logo_rounded_large.png" width="720" height="720"/>
         <image name="trafieText.png" width="305" height="98"/>
+        <image name="tw_filled.png" width="100" height="100"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="SfV-FT-GGy"/>
@@ -3017,5 +3054,5 @@
         <segue reference="EWs-qY-JgS"/>
         <segue reference="F7x-e7-sG4"/>
     </inferredMetricsTieBreakers>
-    <color key="tintColor" red="0.60814687239999998" green="0.72578632440000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+    <color key="tintColor" red="0.60784313725490191" green="0.72549019607843135" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
